# EmbodiedGPT_Pytorch

./: INSTALLATION.md  README.md  align.sh  pyproject.toml  requirements.txt  zero_stage0_config.json  zero_stage1_config.json  zero_stage2_config.json  zero_stage3_config.json
demo/: inference.py  script.py  test.py
robohusky/: base_dataset.py  base_dataset_uni.py  compression.py  configuration_husky.py  constants.py  conversation.py  convert_fp16.py  convert_husky_fp16.py  convert_reward_fp16.py  dist_utils.py  llama2_flash_attn_monkey_patch.py  utils.py  video_transformers.py
robohusky/model/: __init__.py  configuration_husky.py  configuration_husky_ori.py  modeling_husky.py  modeling_husky_embody2.py  modeling_husky_embody2_ori.py  processing_husky.py
robohusky/train/: llama_flash_attn_monkey_patch.py  llama_rmsnorm_monkey_patch.py  train.py  train_uni.py
train_files/: example_train_file.json
