[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robohusky"
version = "0.1.0"
description = "An open platform for training, serving, and evaluating large language model based chatbots."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "accelerate", "fastapi", "gradio>=3.23", "markdown2[all]", "numpy",
    "prompt_toolkit>=3.0.0", "requests", "rich>=10.0.0", "sentencepiece",
    "torchvision>=0.15.2", "shortuuid", "transformers>=4.34.1", "tokenizers>=0.14.1",
    "torch>=2.0", "uvicorn", "wandb", "httpx", "shortuuid", "pydantic", "nh3",
]

[project.optional-dependencies]
dev = ["black>=23.3.0", "pylint>=2.8.2"]

[project.urls]
"Homepage" = "https://github.com/EmbodiedGPT/EmbodiedGPT_Pytorch"
"Bug Tracker" = "https://github.com/EmbodiedGPT/EmbodiedGPT_Pytorch/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
